2017-05-19  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/tests/test_physics.py:

	Adapated test case to the fixed version of `planck_wavenumber`.

2017-05-18  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/em.py(planck_wavenumber): SERIOUS BUGFIX

	There was a typo in the equation.  If you ever used it, please retract
	all your papers and return your PhD and other degrees because the
	output was INCORRECT.

2017-05-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* Changed format for version number!

	* typhon/version.py:

	The format of the module version number has changed.
	The new format is recognized by pip (and IDEs like PyCharm).

	The new format is: <major>.<minor>.<micro><revision>

	Example of resulting version number: 0.3.6r10443

2017-05-16  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Added dictionary with NOAA satellite numbers.  Made something up for
	tirosn, metopa, metopb.
	
	* typhon/datasets/dataset.py:

	(Dataset):

	- Added attributes read_returns (set to either ndarray or xarray) and
	concat_coor (if the concatenation coordinate for xarray datasets is
	not the time one).

	(Dataset.read_period):

	- Bugfix in logging message, want not satname (which is not always
	extant) but locator_args (more generic).

	(Dataset._apply_limits_and_filters):

	- Filters works for xarray.  Limits does not.

	(Dataset._finalise_arr):

	- Permit using a non-time coordinate for concatenation of xarray
	datasets.

	(Dataset._add_pseudo_fields):

	- Support either ndarray or xarray.

	(Dataset.combine):

	- Add field time_name which can be customised to be different than
	'time'.

	- Support either ndarray or xarray.

	* typhon/datasets/tovs.py:

	(TOVSCollocatedDataset.combine):

	- Support either ndarray or xarray.

	(HIRSHIRS._read):

	- Support either ndarray or xarray.


	* typhon/utils/__init__.py(get_time_dimensions):

	- Tell me the time dimensions of an xarray dataset.
