@@ -1,6 +1,7 @@
 # -*- coding: utf-8 -*-
 
-__all__ = ['dimension_names', 'tensor_names', 'basic_types']
+__all__ = ['dimension_names', 'tensor_names', 'complex_tensor_names',
+           'basic_types']
 
 # Source: ARTS developer guide, section 3.4
 dimension_names = [
@@ -14,6 +15,10 @@ dimension_names = [
 
 tensor_names = [
     'Vector', 'Matrix', 'Tensor3', 'Tensor4', 'Tensor5', 'Tensor6', 'Tensor7']
+
+complex_tensor_names = [
+    'ComplexVector', 'ComplexMatrix', 'ComplexTensor3', 'ComplexTensor4',
+    'ComplexTensor5', 'ComplexTensor6', 'ComplexTensor7']
 
 basic_types = {
     'tuple': 'Array',
